<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_tint"
    android:elevation="25dp"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_back"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/text"
                android:inputType="textPersonName"
                android:padding="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_translate"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_back"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/translate"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:focusable="false"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_translate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textColor="@color/white"
                android:text="@string/translate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_translate"
                android:background="@drawable/button_back"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_translate">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_show"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/show_test_notify"
                    android:background="@drawable/button_back"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_destination_language" />

                <RadioGroup
                    android:id="@+id/grp_groupButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/btn_english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="eng"
                        android:text="@string/english" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/btn_germany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="ger"
                        android:text="@string/germany" />
                </RadioGroup>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>