<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/laptop_background"/>

    <View
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="30dp"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amin_najafloo_shahpar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_developer"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amin_najafloo_gmail_com"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_telegram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/telegram"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_whatsapp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/whatsapp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_linkedin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/linkedin"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abouttitle"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutme"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_alignTop="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-63dp"
        android:background="@drawable/white_circle"
        android:elevation="25dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignTop="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:elevation="25dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:src="@drawable/najafloo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back_24" />


</RelativeLayout>